--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,9 +9,11 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 'go1.16beta1'
+          go-version: '1.15.0'
+      - name: Install Go1.16 Beta 1
+        run: go get golang.org/dl/go1.16beta1 && go1.16beta1 download
       - name: Run tests
-        run: go test -v -race ./...
+        run: go1.16beta1 test -v -race ./...
       - name: Run lint
         uses: golangci/golangci-lint-action@v2
         with:
@@ -20,5 +22,5 @@ jobs:
         env:
           CGO_ENABLED: 0
         run: |
-          go build -o example ./cmd/example
-          go build -o pixel ./cmd/pixel
+          go1.16beta1 build -o example ./cmd/example
+          go1.16beta1 build -o pixel ./cmd/pixel
