temporarily disable lint

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,10 +14,10 @@ jobs:
         run: go get golang.org/dl/go1.16beta1 && go1.16beta1 download
       - name: Run tests
         run: go1.16beta1 test -v -race ./...
-      - name: Run lint
-        uses: golangci/golangci-lint-action@v2
-        with:
-          version: v1.29
+      #- name: Run lint
+        #uses: golangci/golangci-lint-action@v2
+        #with:
+          #version: v1.29
       - name: Build examples
         env:
           CGO_ENABLED: 0
